@@ -970,7 +970,7 @@ var CloudCommander, Util,
     };
     
     /**
-     *
+     * get size
      * @pCurrentFile
      */
     DOM.getCurrentSize          = function(pCurrentFile){
@@ -982,6 +982,19 @@ var CloudCommander, Util,
             lRet        = Util.removeStrOneTime(lSize, ['<', '>']);
         
         return lRet;
+    };
+    
+    /**
+     * set size
+     * @pCurrentFile
+     */
+    DOM.setCurrentSize          = function(pSize, pCurrentFile){
+        var lCurrent        = pCurrentFile || DOM.getCurrentFile(),
+            lSizeElement    = DOM.getByClass('size', lCurrent),
+            lSize           = CloudFunc.getShortSize(pSize);
+        
+        lSizeElement[0].textContent = lSize;
+
     };
     
     /**
